[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesa-sdk"
version = "0.3.1"
description = "Python SDK for the Mesa API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Mesa", email = "support@mesa.dev" },
]
dependencies = [
    "httpx>=0.20.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://mesa.dev"
Repository = "https://github.com/mesa-dot-dev/sdk-python"
